--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Check out repository
+      uses: actions/checkout@main
     - name: make
       run: make
   
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
-    - name: make test
-      run : make test
+      - name: Check out repository
+        uses: actions/checkout@main
+      - name: make test
+        run : make test
