--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,16 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Check out repository
-      uses: actions/checkout@main
+      uses: actions/checkout@master
     - name: make
       run: make
   
@@ -20,7 +20,7 @@ jobs:
     needs: build
     steps:
       - name: Check out repository
-        uses: actions/checkout@main
+        uses: actions/checkout@master
         
       - name: Setup BATS
         uses: mig4/setup-bats@v1
